<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.goals.GoalsFragment">

    <Button
        android:id="@+id/button_refresh"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/drawable_bg"
        app:iconPadding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_refresh">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qe1" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qe2" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qt1" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qt2" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="00:00"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/materialProgressBar"
        app:layout_constraintStart_toStartOf="@+id/materialProgressBar"
        app:layout_constraintTop_toTopOf="@+id/materialProgressBar" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBar_timer"
        android:layout_width="300dp"
        android:layout_height="6dp"
        android:stepSize="1.0"
        android:valueFrom="5.0"
        android:valueTo="30.0"
        app:labelBehavior="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialProgressBar"
        app:layout_constraintVertical_bias="0.723"
        app:thumbRadius="10dp"
        app:trackHeight="4dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_1"
        android:text="@string/goals_fragment_reset_timer"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_start"
        app:layout_constraintTop_toBottomOf="@+id/materialProgressBar"
        app:srcCompat="@drawable/ic_baseline_stop_24"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_1"
        android:text="@string/goals_fragment_start_timer"
        app:layout_constraintBottom_toBottomOf="@+id/button_reset"
        app:layout_constraintEnd_toStartOf="@+id/button_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_reset"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:id="@+id/materialProgressBar"
        android:layout_width="360dp"
        android:layout_height="360dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>